# qtpy-dynamic-font-size-label

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: standard.yml
conda-recipe/: meta.yaml
docs/source/: conf.py  index.rst
master/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
qtpy_dynamic_font_size_label/: util.py  widgets.py
qtpy_dynamic_font_size_label/examples/: example.py
