[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2"
]

[project]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]

description = "PyQt/PySide dynamic font size QLabel"
dynamic = [ "version", "readme", "dependencies", "optional-dependencies",]
keywords = []
name = "qtpy-dynamic-font-size-label"
requires-python = ">=3.9"

[options]
zip_safe = false
include_package_data = true

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "qtpy_dynamic_font_size_label*",]
namespaces = false

[[project.authors]]
name = "SLAC National Accelerator Laboratory"

[project.license]
file = "LICENSE"

[project.scripts]
"qtpy-dynamic-font-size-label" = "qtpy_dynamic_font_size_label.bin.main:main"

[tool.setuptools_scm]
write_to = "qtpy_dynamic_font_size_label/_version.py"

[tool.setuptools.dynamic.readme]
file = "README.rst"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.setuptools.dynamic.optional-dependencies.test]
file = "dev-requirements.txt"

[tool.setuptools.dynamic.optional-dependencies.doc]
file = "docs-requirements.txt"

[tool.pytest.ini_options]
addopts = "--cov=."

